fix routes id
