# src/routes/budgets.js
@@ -3,7 +3,7 @@ const budgetsController = require('../controllers/budgets');
 const validate = require('../middleware/validate');
 
 router.get('/', budgetsController.getAll);
-router.get('/user/:id', budgetsController.getAllByUserId);
+router.get('/user/:user_id', budgetsController.getAllByUserId);
 router.get('/:id', budgetsController.getById);
 router.post('/', validate.saveBudget, budgetsController.create);
 router.put('/:id', validate.saveBudget, budgetsController.update);
