# src/routes/incomes.js
@@ -4,8 +4,8 @@ const validate = require('../middleware/validate');
 
 router.get('/', incomesController.getAll);
 router.get('/:id', incomesController.getById);
-router.get('/user/:id', incomesController.getAllByUserId);
-router.get('/budget/:id', incomesController.getAllByBudgetId);
+router.get('/user/:user_id', incomesController.getAllByUserId);
+router.get('/budget/:budget_id', incomesController.getAllByBudgetId);
 router.post('/', validate.saveBudget, incomesController.create);
 router.put('/:id', validate.saveBudget, incomesController.update);
 router.delete('/:id', incomesController.deleteOne);
